--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 
 <body>
-  <div class="controls">
-    <p>
-      <button id="draw">Draw polygon</button>
-      <button id="remove">Remove polygon</button>
+  <div class="drawer">
+    <div class="controls">
+      <!-- <button id="draw">Draw polygon</button>
+      <button id="remove">Remove polygon</button> -->
+      <button id="get-data">Get data</button>
       <input type="file" id="file" accept="image/jpeg, image/png, image/jpg">
-    </p>
-  </div>
-  <div class="canvas-wr">
-    <img src="" alt="" id="img" class="canvas-img">
-    <canvas id="canvas" style="border: 1px solid grey;"></canvas>
+    </div>
+    <div class="canvas-wr">
+      <img src="" alt="" id="img" class="canvas-img">
+      <!-- <canvas id="canvas" style="border: 1px solid grey;"></canvas> -->
+    </div>
   </div>
   <!-- <script src="./src/index.js"></script> -->
 </body>
